<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">COVID TRACKER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_map_api_key">AIzaSyCP-NQrUCfxmUFfzEES9-hhZC5XExQsk4w</string>
    <string name="login_logo_description">Login</string>
    <string name="username_hint">username@yahoo.com</string>
    <string name="password_hint">password</string>
    <string name="login_button_text">Login</string>
    <string name="signUp">Sign up new account</string>
    <string name="loginGit">Login with GitHub account</string>
</resources>